# test-internal-haddock

./: .gitignore  README.md  test-internal-haddock.cabal
src/: Lib.hs
src-internal/: Internal.hs
