name:                test-internal-haddock
version:             0.1.0.0
homepage:            https://github.com/qrilka/test-internal#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:    Lib
  hs-source-dirs:     src
  build-depends:      base, internal-lib
  default-language:   Haskell2010

library internal-lib
  exposed-modules:    Internal
  hs-source-dirs:     src-internal
  build-depends:      base
  default-language:   Haskell2010
