name:                test-internal-haddock
version:             0.1.0.0
homepage:            https://github.com/qrilka/test-internal-haddock#readme
license:             BSD3
license-file:        LICENSE
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:    Lib
  reexported-modules:
        Internal
  hs-source-dirs:     src
  build-depends:      base, internal-lib
  default-language:   Haskell2010

library internal-lib
  exposed-modules:    Internal
  hs-source-dirs:     src-internal
  build-depends:      base
  default-language:   Haskell2010
